@@ -1593,3 +1593,10 @@ Fri Sep 10 15:51:51 PDT 1999
 
 doen allow user resize vertically and horizotnally whne shaeded too as well 
 as normal resize
+
+-------------------------------------------------------------------------------
+
+Fri Sep 10 15:53:10 PDT 1999
+(Raster)
+
+and dont allow maximising fo windwos when shaded...
